--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -9,7 +9,7 @@ body {margin:0; padding:0;}
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.container > main {flex:1; max-width:1300px;}
+.container > main {flex:1;}
 
 nav.breadcrumb ol {display: flex; flex-direction:column; list-style-type: none; padding-left:0; }
 nav.breadcrumb ol a {display: block; padding: 10px 1rem; }
