--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -16,7 +16,6 @@ nav.breadcrumb ol a {display: block; padding: 10px 1rem; }
 nav.breadcrumb ol span {padding: 10px;}
 nav.breadcrumb ol li:last-of-type a {pointer-events: none; color: rgba(51, 51, 51, .3); text-shadow: 1px 1px rgba(51, 51, 51, .3); text-decoration: none; }
 
-
 @media (min-width:800px) {
     nav.breadcrumb ol {
         flex-direction: row;
@@ -28,7 +27,7 @@ nav.breadcrumb ol li:last-of-type a {pointer-events: none; color: rgba(51, 51, 5
         }
 }
 p, li, a { word-wrap: break-word; }
-pre {max-width: 100%; width:100%;}
+/* pre {max-width: 100%; width:100%;} */
 
 section.sectionAutomenu {position: sticky; top:0;}
 
